--- a/index (2).html
+++ b/index (2).html
@@ -11,7 +11,7 @@
              
             <br>   <input type="password" id="fname" name="fname"><br> 
             <br> <button type="button">Zaloguj się (Giga Chad) </button></p>
-            <p> <a href="url">Nie masz konta Jebacza? Zarejestruj sie!</a> </p>
+            <p> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Nie masz konta Jebacza? Zarejestruj sie!</a> </p>
 
         <center> <font face="Georgia, Times, serif">Strona o jebaniu opsa pedofila</font> </center>
         <row> <img src="XD.jpg"> <img src="tomek.jpg" 
